<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:textColorHint="@color/blue_700">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/main_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_900"
            tools:text="daniel@digitalhouse.com"
            android:backgroundTint="@color/blue_700"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/blue_700">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/main_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_900"
            tools:text="daniel@digitalhouse.com"
            android:inputType="textPassword"
            android:backgroundTint="@color/blue_700" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/main_btn_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/red_300"
        android:text="@string/log_in"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/main_btn_register_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/blue_grey_400"
        android:text="@string/register"
        android:textColor="@color/white"/>




</LinearLayout>