<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity"
    >
    <ImageView
        android:id="@+id/register_img_seta_voltar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_arrow_back_blue_24dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/nome"
        android:textColorHint="@color/blue_700">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_nome_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_900"
            tools:text="Daniel Wong Costa"
            android:backgroundTint="@color/blue_700"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/blue_700">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_900"
            tools:text="daniel@digitalhouse.com"
            android:backgroundTint="@color/blue_700"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/blue_700">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_900"
            tools:text="daniel@digitalhouse.com"
            android:inputType="textPassword"
            android:backgroundTint="@color/blue_700" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/blue_700">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_confirm_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_900"
            tools:text="daniel@digitalhouse.com"
            android:inputType="textPassword"
            android:backgroundTint="@color/blue_700" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/register_btn_register_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:background="@color/red_300"
        android:text="@string/register"
        android:textColor="@color/white"
        />




</LinearLayout>